# CPP-RPG-Game

./: .gitmodules  CMakeLists.txt  init_tmux.sh
.cache/clangd/index/: cgltf.h.17CF63DB5094CAF0.idx  config.h.2489EB4CD0830541.idx  context.c.F67C6E862C663F71.idx  dr_mp3.h.DB570763DA7B26F7.idx  dr_wav.h.A48BCED903036F00.idx  egl_context.c.AF5420EBF262DB0C.idx  glad.h.36E1C8BA444FD860.idx  glfw3.h.A15D7FA2E985D5E6.idx  glfw3native.h.BF794BF36A9ECC30.idx  glx_context.c.59930E71D8467D75.idx  init.c.2DA3DCBE5D913B93.idx  input.c.9ACFAD6E534DBBA5.idx  internal.h.92BF1F18184E38E0.idx  jar_mod.h.BD63148342DD8A41.idx  jar_xm.h.2E96EAF4AA7D45C2.idx  linux_joystick.c.4BB44DF8CEA52B65.idx  linux_joystick.h.6B2A72D74AAF58C7.idx  m3d.h.D4708D101B12E9A1.idx  main.cpp.9E59A81EB6CB7C0F.idx  mappings.h.E647255CBDBA28EF.idx  miniaudio.h.AE3076FB5F24DBFA.idx  monitor.c.F35E2AA0CE47F76D.idx  msf_gif.h.34858C2D5852271C.idx  null_init.c.146508D20279BE7F.idx  null_joystick.c.BB3EFC2ACAE55EF3.idx  null_joystick.h.4E1E0FEA37EBDB4D.idx  null_monitor.c.36EFB0669EADFAE9.idx  null_platform.h.51BAA035917C566C.idx  null_window.c.3A7A1EA939694FC1.idx  osmesa_context.c.8B15F6CE597AB077.idx  par_shapes.h.4ED16739ED495ABF.idx  platform.c.53F2BCB6AA4DCE29.idx  platform.h.099CA58DB65E34FC.idx  posix_module.c.B7CDB4BD37A38A95.idx  posix_poll.c.163E7C221DB70357.idx  posix_poll.h.B1AB2462EBD1AB80.idx  posix_thread.c.919948D465833EC4.idx  posix_thread.h.252FF579F75D7442.idx  posix_time.c.96BF2B15A0DF0B0E.idx  posix_time.h.90D48AF1B84F8EEE.idx  (+38 more)
assets/map/: Tileset.tsx  first-map.tmx  rpg-game.tiled-session  second-map.tmx
lib/raylib-tmx/include/: raylib-tmx.h
src/: TODO.md  animated_sprite.hpp  animation.cpp  animation.hpp  animation_config.hpp  animation_system.cpp  animation_system.hpp  coin_entity.hpp  enemy.cpp  enemy.hpp  entity.hpp  fireball_entity.hpp  game_camera.cpp  game_camera.hpp  game_map.cpp  game_map.hpp  live_entity.hpp  main.cpp  map.hpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp  projectile_system.cpp  projectile_system.hpp  sprite.hpp  tmx.cpp  tmx.hpp
